--- a/Oanda-main.ipynb
+++ b/Oanda-main.ipynb
@@ -45,8 +45,8 @@
     "\n",
     "from oandapyV20.contrib.factories import InstrumentsCandlesFactory\n",
     "\n",
-    "accountID = \"101-004-11825438-001\"\n",
-    "access_token = \"1f5b26a4026a2c558d1b7242d0893ec7-d8915fe936ed95e499e9d4efd57bb282\"\n",
+    "accountID = \"\"\n",
+    "access_token = \"\"\n",
     "\n",
     "client = oandapyV20.API(access_token=access_token)"
    ]
